[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
authors = [
  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
]
version = "0.3.5"
description = "CLI app to manage your Apple Notes and Apple reminders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "chardet>=5.2.0",
  "click>=8.1.8",
  "html2text>=2024.2.26",
  "mistune>=3.1.3",
  "pytest>=8.3.5",
  "urllib3>=2.6.3",
]


[project.optional-dependencies]
docs = ["mkdocs>=1.5.3", "mkdocs-material>=9.5.18", "mkdocs-awesome-nav>=3.1.1"]


[project.urls]
Repository = "https://github.com/antoniorodr/memo"
Issues = "https://github.com/antoniorodr/memo/issues"

[project.scripts]
memo = "memo.memo:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
