[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
authors = [
  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
]
version = "0.5.2"
description = "CLI app to manage your Apple Notes and Apple reminders"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
  "chardet>=5.2.0",
  "click>=8.1.8",
  "html2text>=2024.2.26",
  "mistune>=3.1.3",
  "urllib3>=2.6.3",
]

[project.urls]
Repository = "https://github.com/antoniorodr/memo"
Issues = "https://github.com/antoniorodr/memo/issues"

[project.scripts]
memo = "memo.memo:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=memo --cov=memo_helpers --cov-report=term-missing --cov-report=lcov:coverage.lcov"

[dependency-groups]
dev = [
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.2.0",
  "pytest>=8.3.5",
  "zensical>=0.0.24",
]
