[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
authors = [
  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
]
version = "0.5.3"
description = "CLI app to manage your Apple Notes and Apple reminders"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "click>=8.3.2",
    "html2text>=2025.4.15",
    "mistune>=3.2.0",
    "urllib3>=2.6.3",
]

[project.urls]
Repository = "https://github.com/antoniorodr/memo"
Issues = "https://github.com/antoniorodr/memo/issues"

[project.scripts]
memo = "memo.memo:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=memo --cov=memo_helpers --cov-report=term-missing --cov-report=lcov:coverage.lcov"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.3",
    "zensical>=0.0.33",
]
